--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
