--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,8 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: hexablocks
-service: test-lambda
+# "app" enables Serverless Framework Dashboard features and sharing them with other Services.
+app: habitmile
+service: habit-lambda
 configValidationMode: error
 
 provider:
